<resources>

    <string name="app_name">VehiclentUser</string>
    <string name="welcome_to_vehiclent">Welcome To Vehiclent</string>
    <!--<string name="map_api_key">AIzaSyAWM_J8fQk4risd3gcjeQng0UzB-kHaHGc</string>
    <string name="map_api_key2">AIzaSyDn1XM2eGQyUNmhEIX1k_pKOhhHlTc0z2s</string>-->
    <string name="map_api2">AIzaSyDKpkPtlJLZC0KR-p-cvb4QXG_5JtXFL40</string>
    <string name="facebook_app_id">2380794048648045</string>
    <string name="fb_login_protocol_scheme">fb2380794048648045</string>


    <!--String TAG ="mainActivity", txnid ="40124012", amount ="", phone ="9816255767",
    prodname ="Android Payment", firstname ="", email ="puneetsharmabd@gmail.com",
    merchantId ="6720730", merchantkey="s1mSSokb";  //   first test key only-->

    <!--app keystore
    Path :  D:\App Publish KeyStore\KeyStoreUser\VehiclentUser.jks
    Password : VehiclentUser-->
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">4012</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">mohit4012@gmail.com</string>
    <string name="firebase_password" translatable="false">123456</string>

    <string name="gps_disable">GPS is disabled in your device. Please turn on location of your device</string>
    <string name="turn_on">Turn on</string>

    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="mobile_email">Mobile / Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password_forgot">Forgot Password</string>
    <string name="email">Email</string>
    <string name="forgot_passwordS">FORGOT PASSWORD?</string>
    <string name="enter_email_desc">Enter your email address and we\'ll send\n you link to reset your password</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="sign_up_user">sign up</string>
    <string name="or">---------------- OR ---------------</string>
    <string name="text_sign_up">sign up</string>
    <string name="line">---------------------</string>
    <string name="signupstartingtext">Don\'t have an account?</string>
    <string name="i_agree_all_the_term_of_your_services">I agree All the term of Your services</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="how_it_works">How It Works</string>
    <string name="payment">Payment</string>
    <string name="user_profile">User Profile</string>
    <string name="edit_profile"><u>Edit Profile</u></string>
    <string name="name">Name :-</string>
    <string name="useremail">Email :-</string>
    <string name="usermobile">Phone-No :-</string>
    <string name="useraddress">Address :-</string>
    <string name="past_jobs">Past Jobs</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="car_care">Car Care</string>
    <string name="please_write_your_problem">Please write your problem.</string>
    <string name="submit">Submit</string>
    <string name="partner_profile">Partner Profile</string>
    <string name="post_job_details">Past Job Detail </string>
    <string name="payable_amount">Payable Amount :-</string>
    <string name="job_dete">Job Date :-</string>
    <string name="service">Service :-</string>
    <string name="congratulations">Congratulations !</string>
    <string name="cong_sucessful">Your Rating Has Successfully Submitted</string>
    <string name="reviews">Reviews</string>
    <string name="thankyou">Thank you for your payment. we have emailed an invoice of this transaction to the registered email address.</string>
    <string name="successful">Your Payment has successful.</string>
    <string name="next">next</string>
    <string name="payments">Payments</string>
    <string name="ok">ok</string>
    <string name="verify_payment">Verify payment</string>
    <string name="congo">Congratulations</string>
    <string name="save_profile">Save Profile</string>
    <string name="maps_key">AIzaSyBZMlkOv4sj-M5JO9p6wksdax4TEjDVLgo</string>
    <string name="title_activity_track">Map</string>
    <string name="track">Track</string>
    <string name="done">Done</string>
    <string name="permission">Please first turn on permission</string>
    <string name="title_activity_tracker_maps">Map</string>
    <string name="check_network_connection">Please check your Network connection</string>
    <string name="title_activity_maps_tracker">Map</string>

    <string-array name="text">
        <item>Mesage sending to service provider</item>
        <item>Please Wait..</item>
    </string-array>
    <string name="title_activity_dummy">dummy</string>
    <string name="on_going">On Going</string>

</resources>
