<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weel_bg"
    tools:context=".congratulationsActivity.CongratulationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_pastdetails"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorGreenButton">

            <TextView
                android:id="@+id/tv_congo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/congo"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_sp22" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relative_pastdetails">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_userprofile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_dp50"
                        android:src="@drawable/ticks" />

                    <TextView
                        android:id="@+id/tv_congratulations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_userprofile"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_dp25"
                        android:text="@string/congratulations"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textsize_sp30" />

                    <TextView
                        android:id="@+id/tv_ordersucessfully"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_congratulations"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_dp25"
                        android:gravity="center"
                        android:text="@string/cong_sucessful"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textsize_sp18" />



                    <Button
                        android:id="@+id/btn_done"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_dp45"
                        android:layout_below="@+id/tv_ordersucessfully"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/margin_dp25"
                        android:layout_marginTop="@dimen/margin_dp45"
                        android:layout_marginRight="@dimen/margin_dp25"
                        android:background="@drawable/custom_next_bg"
                        android:text="@string/done"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/textsize_sp18"
                        android:layout_marginBottom="@dimen/margin_dp25"/>


                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>