<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".signInActivity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_applogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_dp90"
                    android:src="@drawable/new_logo" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_applogo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_dp50"
                    android:text="@string/username"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_sp25" />

                <EditText
                    android:id="@+id/edit_usereamil"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_dp50"
                    android:layout_below="@+id/tv_username"
                    android:layout_marginLeft="@dimen/margin_dp35"
                    android:layout_marginTop="@dimen/margin_dp10"
                    android:imeOptions="actionNext"
                    android:layout_marginRight="@dimen/margin_dp25"
                    android:background="@drawable/custom_edittext_bg"
                    android:drawableRight="@drawable/user_login"
                    android:hint="@string/mobile_email"
                    android:inputType="text"
                    android:paddingLeft="@dimen/padding_dp15"
                    android:paddingRight="@dimen/padding_dp25"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/textsize_sp18" />

                <TextView
                    android:id="@+id/tv_userpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_usereamil"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_dp20"
                    android:text="@string/password"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textsize_sp25" />


                <EditText
                    android:id="@+id/edit_userpassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_dp50"
                    android:layout_below="@+id/tv_userpassword"
                    android:layout_alignLeft="@+id/edit_usereamil"
                    android:layout_alignRight="@+id/edit_usereamil"
                    android:layout_marginTop="@dimen/margin_dp10"
                    android:background="@drawable/custom_edittext_bg"
                    android:drawableRight="@drawable/password"
                    android:hint="*******"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/padding_dp15"
                    android:paddingRight="@dimen/padding_dp25"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/textsize_sp18" />

                <TextView
                    android:id="@+id/tv_forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_userpassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_dp20"
                    android:padding="@dimen/padding_dp5"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorRedText"
                    android:textSize="@dimen/textsize_sp20" />


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_below="@+id/tv_forgotpassword"
                    android:layout_alignStart="@+id/tv_forgotpassword"
                    android:layout_alignEnd="@+id/tv_forgotpassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_dp35"
                    android:onClick="onSignInClicked"
                    android:background="@drawable/custom_login_bg"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    tools:ignore="OnClick" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_login"
                    android:layout_marginTop="@dimen/margin_dp15"
                    android:layout_marginBottom="@dimen/margin_dp25"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signupstartingtext"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/textsize_sp17" />

                    <TextView
                        android:id="@+id/signUpClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_dp5"
                        android:layout_toRightOf="@+id/signUp"
                        android:text="Sign up"
                        android:textColor="@color/colorRedText"
                        android:textSize="@dimen/textsize_sp17" />

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>