<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".welcomeScreen.WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_applogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="120dp"
                    android:src="@drawable/new_logo" />

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_applogo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/welcome_to_vehiclent"
                    android:textColor="@color/colorRedText"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/tv_addmore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_welcome"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="Add More Life to Your Car."
                    android:textColor="@color/colorGreenText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/tv_addmore"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_dp100"
                    android:layout_marginTop="@dimen/margin_dp50"
                    android:layout_marginRight="@dimen/margin_dp100"
                    android:background="@drawable/custom_login_bg"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/btn_login"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_dp100"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="@dimen/margin_dp100"
                    android:layout_marginBottom="@dimen/margin_dp50"
                    android:background="@drawable/custom_signin_bg"
                    android:text="@string/text_sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>